[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/game.theme" type="Theme" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
size_flags_horizontal = 3
alignment = 1

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
margin_right = 338.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Score: XYZ"

[node name="ResourcesLabel" type="Label" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Resources: ABC"

[node name="BaseHealthLabel" type="Label" parent="HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Base Health: N"

[node name="MeteorProgressBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
max_value = 10.0
percent_visible = false
